@@ -1,3 +1,8 @@
+2016-11-17	"I shot an arrow in to the air, and it stuck."  (4)
+
+		include/innocent-pear/ohai.h :
+		- let us try this...
+
 2016-11-16	Veneers and more.
 
 		include/innocent-pear/omg.h :
